# zs

./: .pre-commit-config.yaml  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py
zs/: cli.py  consts.py  telegram.py
zs/asset/: README.md  data.py  models.py  qieman.py
zs/cli/: asset.py  main.py  rss.py  telegram.py
zs/models/: __init__.py  database.py
zs/rss/: config.py  consts.py  daily_digest_rss.json  efb_scenario_template.json  huginn.py  kz_scenario_template.json  models.py  sender.py
