[tool.poetry]
name = "zs"
version = "0.7.0"
description = ""
authors = ["Linusp <linusp1024@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
PySocks = "^1.7.1"
Telethon = "^1.24.0"
python-dateutil = "^2.8.2"
peewee = "^3.13.2"
requests = "^2.28.1"
feedparser = "^6.0.10"
tabulate = "^0.8.10"
lxml = "^4.9.1"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^22.6.0"
isort = "^5.10.1"
codespell = "^2.1.0"
pre-commit = "^2.17.0"
ipython = "^8.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
skip-string-normalization = true
extend-exclude = '''
/(
  # exclude migrations
  | migrations
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
remove_redundant_aliases = true

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
