[tool.black]
line-length = 99
skip-string-normalization = true
extend-exclude = '''
/(
  # exclude migrations
  | migrations
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
remove_redundant_aliases = true

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[project]
name = "zs"
version = "0.7.2"
description = "Some personal scripts"
authors = [
    {name = "Linusp", email = "linusp1024@gmail.com"},
]
dependencies = [
    "click",
    "pysocks",
    "telethon",
    "python-dateutil",
    "peewee",
    "requests",
    "feedparser",
    "tabulate",
    "lxml",
    "pydantic",
]
requires-python = ">=3.6"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.setuptools]
zip-safe = true
include-package-data = true

[tool.setuptools.packages]
find = {}

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
zs = "zs.cli.main:main"
zs-tg = "zs.cli.telegram:main"
zs-rss = "zs.cli.rss:main"

[project.urls]
Homepage = "https://github.com/Linusp/zs"
