[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[project]
name = "zs"
version = "0.7.2"
description = "Some personal scripts"
authors = [
    {name = "Linusp", email = "linusp1024@gmail.com"},
]
dependencies = [
    "click",
    "pysocks",
    "telethon",
    "python-dateutil",
    "peewee",
    "requests",
    "feedparser",
    "tabulate",
    "lxml",
    "pydantic",
]
requires-python = ">=3.6"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.setuptools]
zip-safe = true
include-package-data = true

[tool.setuptools.packages]
find = {}

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
zs = "zs.cli.main:main"
zs-tg = "zs.cli.telegram:main"
zs-rss = "zs.cli.rss:main"

[project.urls]
Homepage = "https://github.com/Linusp/zs"

[tool.codespell]
skip = "*.lock,./.tox,./.venv,./.git,./venv"
quiet-level = 3
ignore-words-list = "zs"
count = ""

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["F"]
ignore = ["E201", "E202"]
